# klever-academy-intro-class

./: .env.example  .gitignore  LICENSE  README-pt-BR.md  README.md
app/web/: .env.example  README-pt-BR.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/web/src/: App.tsx  klever.ts  main.tsx  vite-env.d.ts
app/web/src/components/: CertificateViewer.tsx  ConnectWallet.tsx  IssueCertificate.tsx
contracts/certificate-registry/: Cargo.toml  README-pt-BR.md  README.md
contracts/certificate-registry/.cargo/: config.toml
contracts/certificate-registry/abi/: certificate-registry.abi.json
contracts/certificate-registry/meta/: Cargo.toml
contracts/certificate-registry/meta/src/: main.rs
contracts/certificate-registry/src/: certificate_registry_proxy.rs  lib.rs
contracts/certificate-registry/tests/: certificate_registry_test.rs
docs/: 01-setup-pt-BR.md  01-setup.md  02-smart-contract-pt-BR.md  02-smart-contract.md  03-build-test-deploy-pt-BR.md  03-build-test-deploy.md  04-klever-connect-pt-BR.md  04-klever-connect.md  05-ai-assisted-development-pt-BR.md  05-ai-assisted-development.md  06-class-challenges-pt-BR.md  06-class-challenges.md
prompts/: ai-debug-contract.md  ai-explain-contract.md  ai-review-contract.md
scripts/: _common.sh  build.sh  deploy.sh  interact.ts  issue-certificate.sh  query-certificate.sh  test.sh
