# Cargo manifest for the Certificate Registry contract.
#
# NOTE: keep `klever-sc` aligned with your installed `ksc` (klever-sc-meta).
# Check it with `~/klever-sdk/ksc --version`; this contract targets 0.45.x, which
# builds and tests on a STABLE Rust toolchain (no nightly needed). If you bump
# this, regenerate the proxy (`cd meta && cargo run -- proxy`) since the framework
# API can change between versions.

[package]
name = "certificate-registry"
version = "0.1.0"
edition = "2021"
authors = ["Klever Academy"]
publish = false

[lib]
path = "src/lib.rs"

[dependencies.klever-sc]
version = "0.45.0"

[dev-dependencies.klever-sc-scenario]
version = "0.45.0"

# `ksc` builds the contract into WebAssembly for Klever VM. Release profile is
# tuned for the smallest possible wasm output.
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false
